# quotegenerator

./: .dockerignore  .env  .env.cloud.backup  .replit  APPLICATION_DOCUMENTATION.md  APPLICATION_TRAINING_MODULE.md  AZURE_CONTAINER_APP_DEPLOYMENT.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_SUMMARY.md  CALCULATION_LOGIC_GUIDE.md  CHANGE_REQUEST.md  DEPLOYMENT_CIRCLECI.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DEVELOPER_GUIDE.md  Dockerfile  INSTALLATION_FILES.md  LOAN_CALCULATION_GUIDE.md  MAINTENANCE_GUIDE.md  Novellus_BRD.md  ONPREMISE_POWERBI_SETUP.md  POWERBI_SSL_TROUBLESHOOTING.md  QUICK_CALCULATION_REFERENCE.md  QUICK_REFERENCE.md  QUOTE_GENERATOR_TRAINING_MANUAL.md  README.md  README_WINDOWS.md  Requirements.txt  SYSTEM_DOCUMENTATION.md  USER_MANUAL.md  WINDOWS_INSTALLATION_GUIDE.md  app.py  auth.py  azure-cleanup-script.sh  azure-container-app.yaml  azure-deploy-script.sh  azure-deployment-test.py  bridge_12month_test.json  bridge_corrected_test.json  bridge_final_test.json  (+154 more)
.circleci/: config.yml
fonts/: README.txt
templates/: .gitkeep  403.html  404.html  500.html  application_detail.html  application_form.html  applications.html  base.html  calculator.html  calculator0808.html  calculator_bkp.html  calculator_bkp05082025.html  calculator_bkp06082025.html  calculator_bkp07082025.html  calculator_bkpworking.html  calculator_compact.html  calculator_old_11082025.html  calculator_w.html  calculator_wizard.html  calculator_working11082025.html  dashboard.html  database_info.html  documents.html  error.html  index.html  landing.html  loan_notes.html  (+17 more)
(+40 files in other folders)
